--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Countdown</title>
   </head>
-  <body>
+  <body style="background-image: url(background.webp);
+  background-position: center;
+  background-size: cover;">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
